--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -102,7 +102,8 @@
       "__tree": "cpp",
       "__tuple": "cpp",
       "cwctype": "cpp",
-      "string_view": "cpp"
+      "string_view": "cpp",
+      "memory_resource": "cpp"
     },
     "cmake.configureSettings": {
       "CODE_COVERAGE": "ON",
@@ -118,5 +119,6 @@
       "OPENSSL_INCLUDE_DIR": "/opt/homebrew/opt/openssl@3/include",
       
       "OPENSSL_USE_STATIC_LIBS": true
-    }
+    },
+    "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
   }
