AES128GCM now working
Signed-off-by: Adam Fowler <adam@adamfowler.org>

--- a/crosscryptfs-tests/CMakeLists.txt
+++ b/crosscryptfs-tests/CMakeLists.txt
@@ -16,6 +16,9 @@ add_executable(crosscryptfs-tests
 
 	# Encryption
 	ecies-tests.cpp
+
+	# High level utilities
+	importer-tests.cpp
 )
 
 include_directories(${crosscryptfs_SOURCE_DIR})
